@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2010 Intel Corporation and others.
+ * Copyright (c) 2007, 2016 Intel Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -306,7 +306,7 @@ public class BuildLanguageData extends CLanguageData {
 	
 /*	private IOption[] getOptionsForType(int type){
 		Map map = getTypeToOptionArrayMap();
-		return (IOption[])map.get(new Integer(type));
+		return (IOption[])map.get(Integer.valueOf(type));
 		
 	}
 */	
