@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2012 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -99,7 +99,7 @@ public class SpellCheckIterator implements ISpellCheckIterator {
 
 		int offset= iterator.current();
 		while (offset != BreakIterator.DONE) {
-			fSentenceBreaks.add(new Integer(offset));
+			fSentenceBreaks.add(Integer.valueOf(offset));
 			offset= iterator.next();
 		}
 	}
